--- a/src/components/Players/players.scss
+++ b/src/components/Players/players.scss
@@ -1,5 +1,26 @@
+
+#root {
+    background-image: url(../../assets/blue.jpg) no-repeat center center fixed;
+    background-size: cover;
+    background-repeat: no-repeat;
+    background-position: center;
+    background-attachment: fixed;
+
+    color: #fff;
+    font-family: 'Roboto', sans-serif;
+    font-size: 16px;
+    line-height: 1.5;
+    margin: 0;
+    padding: 0;
+}
+
 body{
-    background-color: #05476D;
+    background: url(../../assets/blue.jpg);
+    background-size: cover;
+    background-repeat: no-repeat;
+    background-position: center;
+    background-attachment: fixed;
+    
     color: #EEEEEE;
     font-family: 'Roboto', sans-serif;
     font-size: 16px;
@@ -67,4 +88,12 @@ li{
     color: #EEEEEE;
     margin: 0;
     padding: 14px;
+}
+
+.rating{
+    font-size: 0.8em;
+    color: #05476D;
+    margin: 0;
+    padding-top: 3;
+    float: right;
 }
